--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.1.0",
+    "@types/react-native": "^0.72.2",
+    "autoprefixer": "^10.4.14",
+    "babel-preset-expo": "^9.3.2",
     "expo": "~48.0.18",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.3",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-web": "~0.18.10",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
