--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.0",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "autoprefixer": "^10.4.14",
     "babel-preset-expo": "^9.3.2",
@@ -22,9 +23,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-bootstrap-icons": "^1.5.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-web": "~0.18.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
